--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Dezer1011/futuresports1.git",
+  "homepage": "https://dezer1011.github.io/futuresports1",
   "name": "futuresports1",
   "version": "0.1.0",
   "private": true,
